<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_view_alert_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_disable_alert_dialog_message"
        android:textColor="@color/black_normal"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/history_disable_alert_dialog_positive_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_alert_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/button_ok"
        app:layout_constraintEnd_toStartOf="@id/button_ok"
        app:layout_constraintTop_toTopOf="@id/button_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>