<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:viewBindingIgnore="true">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine_dialog_sign_in_button_text"
        android:textColor="@color/color_accent"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_middle"
        app:layout_constraintEnd_toStartOf="@id/text_view_middle"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="30dp"/>

    <TextView
        android:id="@+id/text_view_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine_dialog_or"
        android:textSize="18sp"
        android:textColor="@color/black_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine_dialog_sign_up_button_text"
        android:textColor="@color/color_accent"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_middle"
        app:layout_constraintStart_toEndOf="@id/text_view_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:cornerRadius="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>