<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.uikit.ShapeView
        android:id="@+id/shape_view_drag_bar"
        android:layout_width="35dp"
        android:layout_height="5dp"
        app:color="#e8eaed"
        app:layout_constraintBottom_toTopOf="@id/guideline_drag_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rectRadius="3dp"
        app:shape="rectangle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_drag_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <ViewStub
        android:id="@+id/view_stub_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shape_view_drag_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/guideline_header" />

    <TextView
        android:id="@+id/text_view_history"
        style="@style/BottomSheetListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_bottom_sheet_first_item"
        android:drawableStart="@drawable/ic_history"
        android:text="@string/mine_dialog_browsing_history"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        android:transitionName="title"/>

    <TextView
        android:id="@+id/text_view_mark"
        style="@style/BottomSheetListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_collections_bookmark"
        android:text="@string/mine_dialog_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_history"
        android:transitionName="title"/>

    <TextView
        android:id="@+id/text_view_todo"
        style="@style/BottomSheetListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_todo"
        android:text="@string/mine_dialog_todo"
        app:layout_constraintTop_toBottomOf="@id/text_view_mark"
        android:transitionName="title"/>

    <TextView
        android:id="@+id/text_view_settings"
        style="@style/BottomSheetListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings"
        android:text="@string/settings"
        android:transitionName="title"
        app:layout_constraintTop_toBottomOf="@id/text_view_todo" />

</androidx.constraintlayout.widget.ConstraintLayout>