<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:animateLayoutChanges="true"
    tools:context=".search.SearchSuggestionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:id="@+id/text_view_hot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion_hot_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_hot_title"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_search_hot"
            tools:itemCount="1" />

        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:id="@+id/text_view_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion_search_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_hot"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/text_view_clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion_clear_history"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_history_title"
            app:layout_constraintBottom_toBottomOf="@id/text_view_history_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_history_title"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_search_history"
            tools:itemCount="10"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>